Corridor Integrado no css(salvo en Room2)

--- a/html/Room3.html
+++ b/html/Room3.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/pilgrimage.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/pilgrimage.css" />
     <link rel="stylesheet" href="../css/timer.css" />
     <link rel="stylesheet" href="../css/room3.css" />
-    <link rel="stylesheet" href="../css/hud.css">
-    <link rel="stylesheet" href="../css/jeepPuzzle.css">
+    <link rel="stylesheet" href="../css/hud.css" />
+    <link rel="stylesheet" href="../css/jeepPuzzle.css" />
     <link rel="stylesheet" href="../css/inventory.css" />
     <title>Room 3 (Jeep)</title>
-</head>
-<body id="room3-background">
+  </head>
+  <body id="room3-background">
     <div class="timer"></div>
 
-    <div class="left-arrow-room" onclick="jumpToRoom1()"></div>
+    <div class="left-arrow-room" onclick="jumpToRoom1(3)"></div>
 
     <div id="jeep-door-glow"></div>
 
@@ -26,58 +26,70 @@
 
     <!--TODO: Lo de abajo-->
     <div class="modal-puzzle" id="modal-puzzle-jeep">
-        <div id="simon-container">
-            <div class="simon-score" id="simon-score">Round 1</div>
-            <div id="simon-start-button">
-                <button class="close-modal-btn" id="start-button" onclick="playRound()">START</button>
-                <button class="close-modal-btn" id="jeep-puzzle-close-btn">CLOSE</button>
-            </div>
-            <div class="simon-first-row">
-                <div class="simon-tile" id="simon-first-row-green"></div>
-                <div class="simon-tile" id="simon-first-row-red"></div>
-                <div class="simon-tile" id="simon-first-row-yellow"></div>
-                <div class="simon-tile" id="simon-first-row-green"></div>
-            </div>
-            <div class="simon-second-row">
-                <div class="simon-tile" id="simon-second-row-left"></div>
-                <div class="simon-tile" id="simon-second-row-up"></div>
-                <div class="simon-tile" id="simon-second-row-right"></div>
-                <div class="simon-tile" id="simon-second-row-down"></div>
-            </div>
-            <div class="simon-third-row">
-                <div class="simon-tile" id="simon-third-row-rune1"></div>
-                <div class="simon-tile" id="simon-third-row-rune2"></div>
-                <div class="simon-tile" id="simon-third-row-rune3"></div>
-                <div class="simon-tile" id="simon-third-row-rune4"></div>
-            </div>
+      <div id="simon-container">
+        <div class="simon-score" id="simon-score">Round 1</div>
+        <div id="simon-start-button">
+          <button
+            class="close-modal-btn"
+            id="start-button"
+            onclick="playRound()"
+          >
+            START
+          </button>
+          <button class="close-modal-btn" id="jeep-puzzle-close-btn">
+            CLOSE
+          </button>
         </div>
+        <div class="simon-first-row">
+          <div class="simon-tile" id="simon-first-row-green"></div>
+          <div class="simon-tile" id="simon-first-row-red"></div>
+          <div class="simon-tile" id="simon-first-row-yellow"></div>
+          <div class="simon-tile" id="simon-first-row-green"></div>
+        </div>
+        <div class="simon-second-row">
+          <div class="simon-tile" id="simon-second-row-left"></div>
+          <div class="simon-tile" id="simon-second-row-up"></div>
+          <div class="simon-tile" id="simon-second-row-right"></div>
+          <div class="simon-tile" id="simon-second-row-down"></div>
+        </div>
+        <div class="simon-third-row">
+          <div class="simon-tile" id="simon-third-row-rune1"></div>
+          <div class="simon-tile" id="simon-third-row-rune2"></div>
+          <div class="simon-tile" id="simon-third-row-rune3"></div>
+          <div class="simon-tile" id="simon-third-row-rune4"></div>
+        </div>
+      </div>
     </div>
 
     <div id="background-overlay"></div>
-</body>
-<script src="../js/timer.js"></script>
-<script src="../js/hud.js"></script>
-<script src="../js/jeepPuzzle.js"></script>
-<script src="../js/modalOpener.js"></script>
-<script src="../js/inventory.js"></script>
-<script>
+  </body>
+  <script src="../js/timer.js"></script>
+  <script src="../js/hud.js"></script>
+  <script src="../js/jeepPuzzle.js"></script>
+  <script src="../js/modalOpener.js"></script>
+  <script src="../js/inventory.js"></script>
+  <script>
     //El siguiente script hace que no puedas hacer zoom en la pagina
-    window.addEventListener("wheel", (e)=>{
-        if(e.ctrlKey){
-            e.preventDefault();
+    window.addEventListener(
+      "wheel",
+      (e) => {
+        if (e.ctrlKey) {
+          e.preventDefault();
         }
-    }, {passive:false});
+      },
+      { passive: false }
+    );
 
-    document.getElementById("slide-blue-ball").addEventListener("click", ()=>{
+    document
+      .getElementById("slide-blue-ball")
+      .addEventListener("click", () => {});
 
-    });
+    document
+      .getElementById("slide-black-ball")
+      .addEventListener("click", () => {});
 
-    document.getElementById("slide-black-ball").addEventListener("click", ()=>{
-
-    });
-
-    function jumpToRoom1(){
-        window.location.href = 'Room1.html';
+    function jumpToRoom1(i) {
+      window.location.href = `puzzleCorridor.html?fromRoom=${i}&boolRoom=1`;
     }
-</script>
+  </script>
 </html>
