--- a/html/Room1.html
+++ b/html/Room1.html
@@ -16,9 +16,9 @@
 <body id="room1-background">
     <div class="timer"></div>
 
-    <div class="right-arrow-room" onclick="jumpToRoom3()"></div>
+    <div class="right-arrow-room" onclick="jumpToRoom(3)"></div>
 
-    <div class="left-arrow-room" onclick="jumpToRoom4()"></div>
+    <div class="left-arrow-room" onclick="jumpToRoom(4)"></div>
 
     <div id="door-glow"></div>
 
@@ -80,12 +80,8 @@
     }, {passive:false});
 
     //Funciones para saltar
-    function jumpToRoom3(){
-        window.location.href = 'Room3.html';
-    }
-
-    function jumpToRoom4(){
-        window.location.href = 'Room4.html';
+    function jumpToRoom(i){
+        window.location.href = `puzzleCorridor.html?fromRoom=1&boolRoom=${i}`;
     }
 </script>
 </html>
