Versión 0.4 del puzzle del PC lista.

--- a/html/ComputerTest.html
+++ b/html/ComputerTest.html
@@ -10,7 +10,7 @@
         <img src="../resources/img/PC/bezel.png" id="bezel-computer" class="noselect"/>
         <div id="content-computer" class="noselect">
           <div id="attempts"></div> <!-- Contenedor para intentos -->
-          <div id="word-container"></div> <!-- Contenedor para palabras -->
+          <div id="word-container-computer"></div> <!-- Contenedor para palabras -->
         </div>
     </div>
     <script src="../js/computerTest.js"></script>
