Cambios: -Revertido el salto de habitaciones al puzzle de miguel. Su puzzle va entre la habitacion 1 y 3. Hasta que no este completo su puzzle no se implementa con el resto -Ya se pueden recoger las 2 bolas del suelo (el inventario se sigue reseteando con los tips) -Cambio minimo en el hud (En el futuro habra cambios grandes porque esta mal estructurado para los dialogos) -Falta por cambiar en inventario cosas y pasarlas a funciones

--- a/html/Room1.html
+++ b/html/Room1.html
@@ -81,7 +81,7 @@
 
     //Funciones para saltar
     function jumpToRoom(i){
-        window.location.href = `puzzleCorridor.html?fromRoom=1&boolRoom=${i}`;
+        window.location.href = `Room${i}.html`;
     }
 </script>
 </html>
