--- a/html/Room3.html
+++ b/html/Room3.html
@@ -86,7 +86,10 @@
       .addEventListener("click", () => {
         slideBallsItem = JSON.parse(localStorage.getItem("slideBallsItem"));
         if(slideBallsItem.includes("blue")){
-          console.log("ya tienes la bola azul");
+          showDialog("I think I have already checked this spot...", JSON.parse(localStorage.getItem("username")), "../resources/sprites/Sila/Sila_Neutra.png");
+          setTimeout(()=>{
+            hideDialog();
+          },3000);
         }else{
           console.log("Has pillado la bola azul");
           slideBallsItem.push("blue");
@@ -101,7 +104,10 @@
       .addEventListener("click", () => {
         slideBallsItem = JSON.parse(localStorage.getItem("slideBallsItem"));
         if(slideBallsItem.includes("black")){
-          console.log("ya tienes la bola negra");
+          showDialog("I think I just saw what was behind this plant", JSON.parse(localStorage.getItem("username")), "../resources/sprites/Sila/Sila_Neutra.png");
+          setTimeout(()=>{
+            hideDialog();
+          },3000);
         }else{
           console.log("Has pillado la bola negra");
           slideBallsItem.push("black");
