--- a/html/Room1.html
+++ b/html/Room1.html
@@ -16,7 +16,7 @@
 <body id="room1-background">
     <div class="timer"></div>
 
-    <div class="right-arrow-room" onclick="jumpToRoom(3)"></div>
+    <div class="right-arrow-room" onclick="jumpToCorridor(3,1)"></div>
 
     <div class="left-arrow-room" onclick="jumpToRoom(4)"></div>
 
@@ -82,6 +82,10 @@
     //Funciones para saltar
     function jumpToRoom(i){
         window.location.href = `Room${i}.html`;
+    }
+
+    function jumpToCorridor(i,j){
+        window.location.href = `puzzleCorridor.html?fromRoom=${j}&boolRoom=${i}`;
     }
 </script>
 </html>
