--- a/bin/puzzleDani1.html
+++ b/bin/puzzleDani1.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Escape Room con Linterna</title>
-    <link rel="stylesheet" href="../css/estiloDani.css" />
+    <link rel="stylesheet" href="../css/darkRoom.css" />
   </head>
   <body>
     <div id="flashlight"></div>
 
-    <script src="../js/scriptDani.js"></script>
+    <script src="../js/darkRoom.js"></script>
   </body>
 </html>
