--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="fullscreen-window-warning-body">
           <br />
-          Take a paper and and pen, or take out your phone or another device to
+          Take pen and paper, or take out your phone or another device to
           write down clues.
           <br />
           <br />
