--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="hub-instructions-box">
         <h1 id="hub-instructions-b">INSTRUCTIONS</h1>
         <hr />
-        Welcome to our science fiction-themed escape room! To complete the objective, you'll need to solve all the puzzles to acquire the necessary pieces to unlock the door within 60 minutes. Throughout the abandoned spaceship, you'll discover clues and objects to assist you in completing the 6 required challenges. If you need assistance, utilize the hint button (shaped like a question mark), and remember, you can adjust settings using the gear icon. The suitcase button will display your current items and give you clues on what can be usefull by clicking on each item.
+        Welcome to our science fiction-themed escape room! To complete the objective, you'll need to solve all the puzzles to acquire the necessary pieces to unlock the door within 60 minutes. Throughout the abandoned spaceship, you'll discover clues and objects to assist you in completing the 6 required challenges. If you need assistance, talk to the game master. The suitcase button displays your current items and give you clues on what can be useful by clicking on each item.
       </div>
       <div id="hub-presentation-box">
         <div class="hub-promotor-card">
