--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="hub-presentation-box">
         <div class="hub-promotor-card">
           <div class="hub-promotor-card-photo"></div>
-          <div class="hub-promotor-card-name">Miguel Vizcaino San Segundo</div>
+          <div class="hub-promotor-card-name">Miguel Vizcaíno San Segundo</div>
           <hr />
           <div class="hub-promotor-card-desc">
             Proud Hufflepuff through and through, dedicated advocate for Rural Trails. When I'm not harvesting olives, you'll find me cheering for Atleti. At 24, I'm more into building than battling in Minecraft
