--- a/html/Room3.html
+++ b/html/Room3.html
@@ -86,11 +86,9 @@
       .addEventListener("click", () => {
         slideBallsItem = JSON.parse(localStorage.getItem("slideBallsItem"));
         if(slideBallsItem.includes("blue")){
-          showDialog("I think I have already checked this spot...", JSON.parse(localStorage.getItem("username")), "../resources/sprites/Sila/Sila_Neutra.png");
-          setTimeout(()=>{
-            hideDialog();
-          },3000);
+          showDialog("I think I have already checked this spot...", `SILA (${JSON.parse(localStorage.getItem("username"))})`, "../resources/sprites/Sila/Sila_Neutra.png");
         }else{
+          showDialog("Yey the BLUE Ball", `SILA (${JSON.parse(localStorage.getItem("username"))})`, "../resources/sprites/Sila/Sila_Feliz.png");
           console.log("Has pillado la bola azul");
           slideBallsItem.push("blue");
           localStorage.setItem("slideBallsItem", JSON.stringify(slideBallsItem));
@@ -104,11 +102,9 @@
       .addEventListener("click", () => {
         slideBallsItem = JSON.parse(localStorage.getItem("slideBallsItem"));
         if(slideBallsItem.includes("black")){
-          showDialog("I think I just saw what was behind this plant", JSON.parse(localStorage.getItem("username")), "../resources/sprites/Sila/Sila_Neutra.png");
-          setTimeout(()=>{
-            hideDialog();
-          },3000);
+          showDialog("I think I just saw what was behind this plant", `SILA (${JSON.parse(localStorage.getItem("username"))})`, "../resources/sprites/Sila/Sila_Neutra.png");
         }else{
+          showDialog("Yey the BLACK Ball", `SILA (${JSON.parse(localStorage.getItem("username"))})`, "../resources/sprites/Sila/Sila_Feliz.png");
           console.log("Has pillado la bola negra");
           slideBallsItem.push("black");
           localStorage.setItem("slideBallsItem", JSON.stringify(slideBallsItem));
