--- a/bin/ComputerTest.html
+++ b/bin/ComputerTest.html
@@ -25,7 +25,7 @@
         </div>
         </div>       
     </div>
-    <script src="../js/computerTest.js"></script>
+    <script src="../js/computerPuzzle copy.js"></script>
 
   </body>
  
