--- a/html/Room1.html
+++ b/html/Room1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=VT323&display-swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/pilgrimage.css">
     <link rel="stylesheet" href="../css/timer.css" />
     <link rel="stylesheet" href="../css/room1.css">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="../css/crystalariumPuzzle.css" />
     <link rel="stylesheet" href="../css/doorPuzzle.css" />
     <link rel="stylesheet" href="../css/inventory.css" />
+    <link rel="stylesheet" href="../css/computer.css">
     <title>Room 1 (Door Room)</title>
 </head>
 <body id="room1-background">
@@ -81,18 +83,22 @@
             </div>
             </div>       
         </div>
+        <div>
+            <button class="close-modal-btn" id="computer-puzzle-close-btn">CLOSE</button>
+        </div>
     </div>
 
     <div id="background-overlay"></div>
     
 </body>
 <script src="../js/timer.js"></script>
+<script src="../js/inventory.js"></script>
 <script src="../js/hud.js"></script>
+<script src="../js/modalOpener.js"></script>
 <script src="../js/slidePuzzle.js"></script>
 <script src="../js/crystalariumPuzzle.js"></script>
-<script src="../js/modalOpener.js"></script>
 <script src="../js/doorPuzzle.js"></script>
-<script src="../js/inventory.js"></script>
+<script src="../js/computerPuzzle.js"></script>
 <script>
     
     //El siguiente script hace que no puedas hacer zoom en la pagina
