--- a/html/Cinematic.html
+++ b/html/Cinematic.html
@@ -23,6 +23,7 @@
 </body>
 <script src="../js/cinematic.js"></script>
 <script src="../js/timer.js"></script>
+<script src="../js/inventory.js"></script>
 <script>
     //El siguiente script hace que no puedas hacer zoom en la pagina
     window.addEventListener("wheel", (e)=>{
