--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
       <div id="hub-instructions-box">
         <h1 id="hub-instructions-b">INSTRUCTIONS</h1>
         <hr />
+        <p>
         Welcome to our science fiction-themed escape room! To complete the objective, you'll need to solve all the puzzles to acquire the necessary pieces to unlock the door within 80 minutes.
         <br><br>Throughout the abandoned spaceship, you'll discover clues and objects to assist you in completing the 6 required challenges. If you need assistance, talk to the game master. The suitcase button displays your current items and give you clues on what can be useful by clicking on each item.
         <br><br>The following screen and browser configurations are compulsory:
-        <br>-Screen resolution must be 1920x1080
-        <br>-Browser resolution must be 1920x1080 on fullscreen when you are at 100% scale (Check a tutorial if you dont know how to configure it). If you use another screen configuration you will notice visual glitches
-        <br>-Browser has to be either Google Chrome or Microsoft Edge other browsers does not support some actions.
+        <br><br>-Screen resolution must be 1920x1080
+        <br><br>-Browser resolution must be 1920x1080 on fullscreen when you are at 100% scale (Check a tutorial if you dont know how to configure it). If you use another screen configuration you will notice visual glitches
+        <br><br>-Browser has to be either Google Chrome or Microsoft Edge other browsers does not support some actions.
+        <br><br>
+        </p>
       </div>
       <div id="hub-presentation-box">
         <div class="hub-promotor-card">
