--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>Hub</title>
   </head>
   <body id="hub-body">
-    <div id="hub-title-box">
+    <div id="hub-title-box" class="font-ours">
       <h1 id="hub-title-h1">The Pilgrimage</h1>
       Discover what rests inside...
     </div>
     <div id="hub-second-row">
-      <div id="hub-instructions-box">
+      <div id="hub-instructions-box" class="font-ours">
         <h1 id="hub-instructions-b">INSTRUCTIONS</h1>
         <hr />
         <p>
@@ -30,7 +30,7 @@
       <div id="hub-presentation-box">
         <div class="hub-promotor-card">
           <div class="hub-promotor-card-photo"></div>
-          <div class="hub-promotor-card-name">Miguel Vizcaíno San Segundo</div>
+          <div class="hub-promotor-card-name font-ours">Miguel Vizcaíno San Segundo</div>
           <hr />
           <div class="hub-promotor-card-desc">
             Proud Hufflepuff through and through, dedicated advocate for Rural Trails. When I'm not harvesting olives, you'll find me cheering for Atleti. At 24, I love narrow and complex corridors.
@@ -38,7 +38,7 @@
         </div>
         <div class="hub-promotor-card">
           <div class="hub-promotor-card-photo"></div>
-          <div class="hub-promotor-card-name">Erik Chaparro de las Heras</div>
+          <div class="hub-promotor-card-name font-ours">Erik Chaparro de las Heras</div>
           <hr />
           <div class="hub-promotor-card-desc">
             My favorite jam is raspberry, and cereal goes before milk; I consider white chocolate as good as any other, and definitely, melon and ham don't go together. Versatile is the word that best defines me, and I'm 21 years old.
@@ -46,7 +46,7 @@
         </div>
         <div class="hub-promotor-card">
           <div class="hub-promotor-card-photo"></div>
-          <div class="hub-promotor-card-name">Daniel Rodríguez Olivar</div>
+          <div class="hub-promotor-card-name font-ours">Daniel Rodríguez Olivar</div>
           <hr />
           <div class="hub-promotor-card-desc">
             My blurry sight and my clear sense of fun made me the best puzzle designer on this project. I was sure that you will distinguish which puzzles are mine. 23y/o.
@@ -56,14 +56,17 @@
     </div>
     <div id="hub-third-row">
       <div id="hub-name-input-box">
-        <input type="text" id="hub-name-input" maxlength="8" placeholder="name..."/>
+        <input type="text" id="hub-name-input" class="font-ours" maxlength="8" placeholder="Name..."/>
       </div>
       <div id="hub-icon-selector">
         <img id="hub-icon-selector-img" src="resources/sprites/Horacio.png" alt="Horacio" />
       </div>
       <div id="hub-blank-space"></div>
+      <div id="hub-icon-selector">
+        <button id="hub-font-button" class="font-ours">Change Font</button>
+      </div>
       <div id="hub-start-button-box">
-        <button class="close-modal-btn" id="hub-start-button">start</button>
+        <button class="close-modal-btn" id="hub-start-button"><span class="font-ours">Start</span></button>
       </div>
     </div>
 
