Boton de cambiar fuente bien diseñado

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <img id="hub-icon-selector-img" src="resources/sprites/Horacio.png" alt="Horacio" />
       </div>
       <div id="hub-blank-space"></div>
-      <div id="hub-icon-selector">
-        <button id="hub-font-button" class="font-ours">Change Font</button>
+      <div id="hub-font-container">
+        <button id="hub-font-button" class="font-ours close-modal-btn">Change Font</button>
       </div>
       <div id="hub-start-button-box">
         <button class="close-modal-btn" id="hub-start-button"><span class="font-ours">Start</span></button>
