--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div id="hub-blank-space"></div>
       <div id="hub-font-container">
-        <button id="hub-font-button" class="font-ours close-modal-btn">Change Font</button>
+        <button id="hub-font-button" class="close-modal-btn"><span class="font-ours">Change Font</span></button>
       </div>
       <div id="hub-start-button-box">
         <button class="close-modal-btn" id="hub-start-button"><span class="font-ours">Start</span></button>
