--- a/html/Ending.html
+++ b/html/Ending.html
@@ -20,7 +20,7 @@
             </div>
             <img id="cinematicNextArrow" src="../resources/Icons/10.png" alt="Siguiente">
         </div>
-        
+        <audio id="room1Music" src="../audio/main/Myuu-Misconception-Piano-Version.mp3" autoplay loop></audio>
 <script src="../js/ending.js"></script>
 <script src="../js/timer.js"></script>
 <script>
