--- a/html/badEnding.html
+++ b/html/badEnding.html
@@ -18,7 +18,7 @@
             </div>
             <img id="cinematicNextArrow" src="../resources/Icons/10.png" alt="Siguiente">
         </div>
-        
+        <audio id="room1Music" src="../audio/main/sinesita - MENACING.mp3" autoplay loop></audio>
 <script src="../js/badEnding.js"></script>
 <script>
     //El siguiente script hace que no puedas hacer zoom en la pagina
