--- a/html/puzzleCorridor.html
+++ b/html/puzzleCorridor.html
@@ -22,6 +22,7 @@
       </div>
     </div>
     <div id="background-overlay"></div>
+    <audio id="room1Music" src="../audio/main/background-sound.mp3" autoplay loop></audio>
   </body>
   <script src="../js/timer.js"></script>
   <script src="../js/hud.js"></script>
