--- a/html/Room1.html
+++ b/html/Room1.html
@@ -89,7 +89,7 @@
     </div>
 
     <div id="background-overlay"></div>
-    
+    <audio id="room1Music" src="../audio/main/background-sound.mp3" autoplay loop></audio>
 </body>
 <script src="../js/timer.js"></script>
 <script src="../js/inventory.js"></script>
