--- a/html/badEnding.html
+++ b/html/badEnding.html
@@ -27,5 +27,6 @@
             e.preventDefault();
         }
     }, {passive:false});
+    document.getElementById("room1Music").volume = 0.5;
 </script>
 </html>
